2004-11-14  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/display/bezier-utils.cpp (sp_bezier_fit_cubic_full):
	  Detect & prevent "ghost spikes", by allowing a corner node if
	  the specified tangent would result in a spike.

	* src/display/bezier-utils.cpp (generate_bezier): Better handling
	  of the case of infinite solutions for the lengths of the two
	  tangent vectors: try requiring that the lengths equal each other,
	  and solving for that length (just one variable).

2004-11-13  Kees Cook  <kees@outflux.net>

	* src/document.cpp: wrapped updateDisplay call in undo insensitivity.
	  Closes bug #1030436.

2004-11-12  MenTaLguY  <mental@rydia.net>

	* src/main.cpp: fpresetsticky -> fpsetsticky

	* src/verbs.cpp: cast width changes

	* src/libnrtype/FlowBoxes.h, src/libnrtype/FlowDefs.h,
	  src/libnrtype/FlowDest.h, src/libnrtype/FlowEater.h,
	  src/libnrtype/FlowRes.h, src/libnrtype/FlowSols.h,
	  src/libnrtype/FlowSrc.h, src/libnrtype/FlowSrcText.h,
	  src/libnrtype/FlowStyle.h, src/libnrtype/FlowUtils.h:
	  remove stdint.h which isn't being used here

	* src/widgets/icon.h, src/widgets/icon.cpp:
	  icon greys out when insensitive

	* src/gc-anchored.h, src/gc-finalized.h, src/gc-managed.h:
	  documentation

	* src/verbs.cpp: changed cast to reinterpret_cast to hopefully
	  avoid compiler warning

2004-11-11  Kees Cook  <kees@outflux.net>

	* src/seltrans.cpp, src/select-context.cpp: ref counting SPObjects
	  correctly so undo's don't blow up an active resize/move.  Closes
	  bug #1018756.

2004-11-11  MenTaLguY  <mental@rydia.net>

	* src/inkscape.cpp, src/main.cpp, src/widgets/icon.cpp:
	  removed sp_bitmap_icons

	* configure.ac, src/sp-image.cpp, src/object-ui.cpp:
	  removed stale autotrace support code

2004-11-10  MenTaLguY  <mental@rydia.net>

	* src/sp-item.cpp, src/sp-clippath.cpp, src/cp-mask.cpp:
	  minor refcounting tweaks

	* src/sp-image.cpp: fixed failure to release GdkPixbufLoader when
	  done with it (fixes bug #1063054)
