@@ -1,5 +1,9 @@
 2004-11-14  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/pencil-context.h, src/pencil-context.cpp
+	  (fit_and_split, sp_pencil_context_init): Explicitly remember required
+	  tangent instead of using "first two points" hack.
+
 	* src/display/bezier-utils.cpp (sp_bezier_fit_cubic_full):
 	  Detect & prevent "ghost spikes", by allowing a corner node if
 	  the specified tangent would result in a spike.
